--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Dienstkontor von Hochstein</title>
+  <title>Dienstleistungskontor von Hochstein</title>
 </head>
 <body>
-  <h1>Willkommen beim Dienstkontor von Hochstein</h1>
+<style>
+  body {
+    background-image: url('img/background.png');
+    background-size: cover;
+    background-position: ;
+    background-repeat: no-repeat;
+  }
+</style>
+  <h1>Willkommen beim Dienstleistungskontor von Hochstein</h1>
   <p>Diese Seite ist ein erster Testlauf über GitHub Pages.</p>
 </body>
 </html>
