--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Dienstleistungskontor von Hochstein</title>
+  <title>DKVH</title>
 </head>
 <body>
 <style>
