--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="UTF-8">
-  <title>DKVH</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DHVK</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<style>
-  body {
-    background-image: url('img/background.png');
-    background-size: cover;
-    background-position: ;
-    background-repeat: no-repeat;
-  }
-</style>
-  <h1>Willkommen beim Dienstleistungskontor von Hochstein</h1>
-  <p>Diese Seite ist ein erster Testlauf über GitHub Pages.</p>
+    <header>
+        <h1>Dienstleistungskontor</h1>
+        <h2>vonHochstein</h2>
+        <h1></h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#">Start</a></li>
+            <li><a href="#">Leistungen</a></li>
+            <li><a href="#">Kontakt</a></li>
+            <li><a href="#">Impressum</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>Willkommen</h2>
+            <p>Dies ist der Webauftritt des Dienstleistungskontor von Hochstein. Ein Ort für ehrliche, bodenständige und vielseitige Dienstleistungen mit Stil.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 Dienstleistungskontor von Hochstein</p>
+    </footer>
 </body>
 </html>
