--- a/leistungen.html
+++ b/leistungen.html
@@ -54,6 +54,16 @@
     Ich biete praktische, unkomplizierte Unterstützung in verschiedenen Bereichen – für Menschen, die Klarheit, Verlässlichkeit und ruhige Handarbeit schätzen.<br>
     Die Leistungsübersicht zeigt lediglich einen Ausschnitt des Gesamtangebots und dient der beispielhaften Orientierung.</p>
 
+    <h3>Webdesign und Webseitenerstellung</h3>
+    <ul class="zentriert">
+      <li>Erstellung schlichter, funktionaler <b>Webseiten nach Kundenwunsch</b> – z. B. als digitale Visitenkarte, Angebotsseite oder Informationsplattform</li>
+      <li>Webseiten für kleine Unternehmen, Vereine, Interessengemeinschaften oder private Projekte</li>
+      <li>Unterstützung und Beratung bei Struktur, Text und technischer Umsetzung</li>
+      <li>Hosting über externe Anbieter oder GitHub Pages möglich</li>
+      <li>Auch Offline-Projekte auf HTML-Basis sind umsetzbar – z. B. ein persönliches Dashboard</li>
+    </ul>
+    <p><em>Ich biete ausschließlich einfache, statische Weblösungen an. Keine Onlineshops, keine Formulare mit Datenspeicherung, keine Datenbankanbindungen, keine Systempflege.</em></p>
+
     <h3>IT- und Bürodienstleistungen</h3>
     <ul class="zentriert">
       <li>Unterstützung bei der effizienten Nutzung von <b>Microsoft Excel</b> – vom einfachen Tabellenaufbau bis zur Erstellung komplexer Formeln und Diagramme.</li>
@@ -84,7 +94,9 @@
       Bei größeren Anliegen arbeite ich mit zuverlässigen Partnern aus der Region zusammen.
     </ul><br>
     
-    <p><strong>Alle Leistungen erfolgen nach individueller Vereinbarung und Verfügbarkeit.</strong></p>
+    <p><strong>Alle Leistungen erfolgen nach individueller Vereinbarung und Verfügbarkeit.<br>
+    Gern unterbreite ich Ihnen ein unverbindliches Angebot</strong></p>
+    
 
     Ich arbeite nicht standardisiert, sondern auf Augenhöhe – mit Maß, Rücksicht und Haltung.<br>
     Ich biete keine Dauerdienstverträge, Systempflege oder feste Wochentermine, sondern zielgerichtete Hilfe im konkreten Fall – persönlich, diskret, solide.<br>
