--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Start</a></li>
-            <li><a href="leistungen.html">Leistungen</a></li>
-            <li><a href="impressum.html">Impressum</a></li>
+      <li><a href="index.html">Start</a></li>
+      <li><a href="leistungen.html">Leistungen</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
+      <li><a href="bewertungen.html">Bewertungen</a></li>
+      <li><a href="impressum.html">Impressum</a></li>
         </ul>
     </nav>
     <main>
@@ -57,12 +59,15 @@
   <p>Ein Kontor im klassischen Sinne – geordnet, aufrichtig, offen für vieles.</p>
 
   <p><strong>Ich freue mich auf Ihre Anfrage.</strong></p><br>
-  <a href="mailto:kontakt@dkvh.de">kontakt@dkvh.de</a>
+  <a href="kontakt.html">Kontakt aufnehmen</a>
 </section>
 
-    </main>
+</main>
     <footer>
-        <p>&copy; 2025 Dienstleistungskontor von Hochstein</p>
+        <p>
+        &copy; 2025 Dienstleistungskontor von Hochstein<br>
+        <a href="kontakt.html">📩 Kontakt</a>
+        </p>
     </footer>
 </body>
 </html>
