--- a/impressum.html
+++ b/impressum.html
@@ -44,10 +44,11 @@
         <ul>
             <li><a href="index.html">Start</a></li>
             <li><a href="leistungen.html">Leistungen</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="bewertungen.html">Bewertungen</a></li>
             <li><a href="impressum.html">Impressum</a></li>
         </ul>
     </nav>
-<body>
   <div id="header"></div>
 
   <main>
@@ -116,7 +117,10 @@
   <p>Ich behalte mir vor, diese Datenschutzerklärung bei Bedarf anzupassen. Bitte informieren Sie sich regelmäßig über den aktuellen Stand.</p>
 </main>
     <footer>
-        <p>&copy; 2025 Dienstleistungskontor von Hochstein</p>
+        <p>
+        &copy; 2025 Dienstleistungskontor von Hochstein<br>
+        <a href="kontakt.html">📩 Kontakt</a>
+        </p>
     </footer>
 </body>
 </html>
