--- a/leistungen.html
+++ b/leistungen.html
@@ -42,9 +42,11 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Start</a></li>
-            <li><a href="leistungen.html">Leistungen</a></li>
-            <li><a href="impressum.html">Impressum</a></li>
+      <li><a href="index.html">Start</a></li>
+      <li><a href="leistungen.html">Leistungen</a></li>
+      <li><a href="kontakt.html">Kontakt</a></li>
+      <li><a href="bewertungen.html">Bewertungen</a></li>
+      <li><a href="impressum.html">Impressum</a></li>
         </ul>
     </nav>
     <main>
@@ -102,8 +104,8 @@
     Ich biete keine Dauerdienstverträge, Systempflege oder feste Wochentermine, sondern zielgerichtete Hilfe im konkreten Fall – persönlich, diskret, solide.<br>
     Wiederkehrende Aufträge nehme ich jedoch gern an, wenn Sie mit meiner Arbeit zufrieden waren – z. B. saisonale Unterstützung bei bestimmten Aufgaben.<br>
     
-    <p>Sie benötigen Beratung oder Unterstützung und möchten Ihr Anliegen unverbindlich mit mir besprechen?<br>
-    Ich freue mich auf Ihre Nachricht per E-Mail an <a href="mailto:kontakt@dkvh.de">kontakt@dkvh.de</a>.</p>
+    <p>Sie benötigen persönliche Beratung oder Unterstützung und möchten Ihr Anliegen unverbindlich mit mir besprechen?<br>
+    <a href="kontakt.html">Nehmen Sie Kontakt auf</a>.</p>
 
     Hinweis: Ich erbringe keine steuer- oder rechtsberatenden Leistungen im Sinne des Steuerberatungsgesetzes oder Rechtsdienstleistungsgesetzes.
 
@@ -111,7 +113,10 @@
 
 </main>
     <footer>
-        <p>&copy; 2025 Dienstleistungskontor von Hochstein</p>
+        <p>
+        &copy; 2025 Dienstleistungskontor von Hochstein<br>
+        <a href="kontakt.html">📩 Kontakt</a>
+        </p>
     </footer>
 </body>
 </html>
