--- a/leistungen.html
+++ b/leistungen.html
@@ -60,6 +60,7 @@
     <ul class="zentriert">
       <li>Erstellung schlichter, funktionaler <b>Webseiten nach Kundenwunsch</b> – z. B. als digitale Visitenkarte, Angebotsseite oder Informationsplattform</li>
       <li>Webseiten für kleine Unternehmen, Vereine, Interessengemeinschaften oder private Projekte</li>
+	  <li>Optimierung für mobile Endgeräte (responsive Gestaltung bei Bedarf)</li>
       <li>Unterstützung und Beratung bei Struktur, Text und technischer Umsetzung</li>
       <li>Hosting über externe Anbieter oder GitHub Pages möglich</li>
       <li>Auch Offline-Projekte auf HTML-Basis sind umsetzbar – z. B. ein persönliches Dashboard</li>
