--- a/leistungen.html
+++ b/leistungen.html
@@ -53,7 +53,7 @@
   <section>
     <h2>Leistungsübersicht</h2>
     <p>Das Dienstleistungskontor von Hochstein versteht sich als vielseitiger, diskreter und zuverlässiger Begleiter in den kleinen und großen Anliegen des Alltags.<br>
-    Ich biete praktische, unkomplizierte Unterstützung in verschiedenen Bereichen – für Menschen, die Klarheit, Verlässlichkeit und ruhige Handarbeit schätzen.<br>
+    Ich biete praktische, unkomplizierte Unterstützung in verschiedenen Bereichen – für Menschen, die Klarheit, Verlässlichkeit und solides Handwerk schätzen.<br>
     Die Leistungsübersicht zeigt lediglich einen Ausschnitt des Gesamtangebots und dient der beispielhaften Orientierung.</p>
 
     <h3>Webdesign und Webseitenerstellung</h3>
