--- a/leistungen.html
+++ b/leistungen.html
@@ -94,7 +94,7 @@
 
     <h2>Kooperationen</h2>
     <ul class="zentriert">
-      Bei größeren Anliegen arbeite ich mit zuverlässigen Partnern aus der Region zusammen.
+      Bei umfangreicheren Aufträgen arbeite ich mit zuverlässigen Partnern aus der Region zusammen.
     </ul><br>
     
     <p><strong>Alle Leistungen erfolgen nach individueller Vereinbarung und Verfügbarkeit.<br>
