--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   <h2>Willkommen beim Dienstleistungskontor von Hochstein</h2>
   <p>In einer Welt, die sich immer schneller dreht, braucht es Orte der Klarheit, der Verlässlichkeit und des ehrlichen Tuns. Das Dienstleistungskontor von Hochstein steht für persönliche, durchdachte und vielseitige Unterstützung – jenseits flüchtiger Trends und leerer Versprechen.</p>
 
-  <p>Ob organisatorisch, handwerklich, beratend oder schlicht helfend: Ich biete keine Lösungen von der Stange, sondern individuelle Leistungen mit Haltung. Dabei zählen nicht bunte Logos oder vollmundige Slogans, sondern Vertrauen, Substanz und Diskretion.</p>
+  <p>Ob organisatorisch, handwerklich, beratend oder schlicht helfend: Ich biete keine Ansätze von der Stange, sondern individuelle Leistungen mit Haltung. Dabei zählen nicht bunte Logos oder vollmundige Slogans, sondern Vertrauen, Substanz und Diskretion.</p>
 
-  <p>Ein Kontor im klassischen Sinne – geordnet, aufrichtig, offen für vieles.</p>
+  <p>Ein Kontor im klassischen Sinne – geordnet, aufrichtig, offen für kluge Lösungen.</p>
 
   <p><strong>Ich freue mich auf Ihre Anfrage.</strong></p><br>
   <a href="kontakt.html">Kontakt aufnehmen</a>
