--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <h2>Willkommen beim Dienstleistungskontor von Hochstein</h2>
   <p>In einer Welt, die sich immer schneller dreht, braucht es Orte der Klarheit, der Verlässlichkeit und des ehrlichen Tuns. Das Dienstleistungskontor von Hochstein steht für persönliche, durchdachte und vielseitige Unterstützung – jenseits flüchtiger Trends und leerer Versprechen.</p>
 
-  <p>Ob organisatorisch, handwerklich, beratend oder schlicht helfend: Ich biete keine Ansätze von der Stange, sondern individuelle Leistungen mit Haltung. Dabei zählen nicht bunte Logos oder vollmundige Slogans, sondern Vertrauen, Substanz und Diskretion - getragen von Verlässlichkeit, Sorgfalt und Gewissenhaftigkeit.</p>
+  <p>Ob organisatorisch, handwerklich, beratend oder schlicht helfend: Ich biete keine Ansätze von der Stange, sondern individuelle Leistungen mit Haltung. Dabei zählen nicht bunte Logos oder vollmundige Slogans, sondern Vertrauen, Substanz und Diskretion - getragen von Gewissenhaftigkeit und Sorgfalt.</p>
 
   <p>Ein Kontor im klassischen Sinne – geordnet, aufrichtig, offen für kluge Lösungen.</p>
 
