--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
         <a href="kontakt.html">📩 Kontakt</a>
         </p>
     </footer>
+<script src="https://cdn.counter.dev/script.js" data-id="e54d12bc-53b5-4e3a-bbfa-c7544409d379" data-utcoffset="1"></script>	
 </body>
 </html>
