--- a/leistungen.html
+++ b/leistungen.html
@@ -30,7 +30,8 @@
         main {
             flex: 1;
         }
-    </style>	
+    </style>
+	<script src="https://cdn.counter.dev/script.js" data-id="e54d12bc-53b5-4e3a-bbfa-c7544409d379" data-utcoffset="1"></script>
 </head>
 
 <body>
