--- a/leistungen.html
+++ b/leistungen.html
@@ -57,6 +57,8 @@
     Ich biete praktische, unkomplizierte Unterstützung in verschiedenen Bereichen – für Menschen, die Klarheit, Verlässlichkeit und solides Handwerk schätzen.<br>
     Die Leistungsübersicht zeigt lediglich einen Ausschnitt des Gesamtangebots und dient der beispielhaften Orientierung.</p>
 
+    </br>
+
     <h3>Webdesign und Webseitenerstellung</h3>
     <ul class="zentriert">
       <li>Erstellung schlichter, funktionaler <b>Webseiten nach Kundenwunsch</b> – z. B. als digitale Visitenkarte, Angebotsseite oder Informationsplattform</li>
@@ -68,6 +70,8 @@
     </ul>
     <p><em>Ich biete ausschließlich einfache, statische Weblösungen an. Keine Onlineshops, keine Formulare mit Datenspeicherung, keine Datenbankanbindungen, keine Systempflege.</em></p>
 
+    <div class="trenner"></div>
+
     <h3>IT- und Bürodienstleistungen</h3>
     <ul class="zentriert">
       <li>Unterstützung bei der effizienten Nutzung von <b>Microsoft Excel</b> – vom einfachen Tabellenaufbau bis zur Erstellung komplexer Formeln und Diagramme.</li>
@@ -76,6 +80,8 @@
       <li>tabellarische <b>Auswertung, Makroprogrammierung, Entwicklung von Formeln und Kalkulationen</b></li>
       <li>komplexe Datenanalyse, auch von Massendaten</li>
     </ul>
+
+    <div class="trenner"></div>
 
     <h3>Modellierung & Visualisierung</h3>
     <ul class="zentriert">
@@ -86,12 +92,16 @@
       Beispiel: Passen meine alten Möbel nach einem Umzug in die neue Wohnung? Ich visualisiere Ihre Idee in einem anschaulichen <b>3D-Modell</b>.
     </ul>
 
+    <div class="trenner"></div>
+
     <h3>Garten- und Hausmeistertätigkeiten</h3>
     <ul class="zentriert">
       <li>Rasen mähen, Freischneiden, Beete pflegen</li>
       <li>Früchte abnehmen / ernten (z. B. Äpfel, Pflaumen, Beeren)</li>
       <li>sonstige einfache Hilfsarbeiten im Haus oder Garten</li>
-    </ul><br>
+    </ul>
+    
+    <br>
 
     <h2>Kooperationen</h2>
     <ul class="zentriert">
