--- a/leistungen.html
+++ b/leistungen.html
@@ -116,7 +116,7 @@
     Ich biete keine Dauerdienstverträge, Systempflege oder feste Wochentermine, sondern zielgerichtete Hilfe im konkreten Fall – persönlich, diskret, solide.<br>
     Wiederkehrende Aufträge nehme ich jedoch gern an, wenn Sie mit meiner Arbeit zufrieden waren – z. B. saisonale Unterstützung bei bestimmten Aufgaben.<br>
     
-    <p>Sie benötigen persönliche Beratung oder Unterstützung und möchten Ihr Anliegen unverbindlich mit mir besprechen?<br>
+    <p>Sie benötigen persönliche Beratung oder Unterstützung und möchten Ihr Anliegen unverbindlich mit mir besprechen?</p>
     <a href="kontakt.html">Nehmen Sie Kontakt auf</a>.</p>
 
     Hinweis: Ich erbringe keine steuer- oder rechtsberatenden Leistungen im Sinne des Steuerberatungsgesetzes oder Rechtsdienstleistungsgesetzes.
