--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
   <p>Ein Kontor im klassischen Sinne – geordnet, aufrichtig, offen für kluge Lösungen.</p>
 
-  <p><strong>Ich freue mich auf Ihre Anfrage.</strong></p><br>
+  <p><strong>Ich freue mich auf Ihre Anfrage.</strong></p>
   <a href="kontakt.html">Kontakt aufnehmen</a>
 </section>
 
