--- a/index.html
+++ b/index.html
@@ -42,13 +42,19 @@
         <h1></h1>
     </header>
     <nav>
-        <ul>
-      <li><a href="index.html">Start</a></li>
-      <li><a href="leistungen.html">Leistungen</a></li>
-      <li><a href="kontakt.html">Kontakt</a></li>
-      <li><a href="bewertungen.html">Bewertungen</a></li>
-      <li><a href="impressum.html">Impressum</a></li>
+    <ul class="navigation">
+        <li><a href="index.html">Start</a></li>
+        <li class="dropdown">
+        <a href="leistungen.html">Leistungen ▾</a>
+        <ul class="dropdown-content">
+            <li><a href="leistungen_it.html">IT & Büro</a></li>
+            <li><a href="leistungen_hg.html">Haus & Garten</a></li>
         </ul>
+        </li>
+        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="bewertungen.html">Bewertungen</a></li>
+        <li><a href="impressum.html">Impressum</a></li>
+    </ul>
     </nav>
     <main>
 <section>
