--- a/leistungen.html
+++ b/leistungen.html
@@ -42,13 +42,19 @@
         <h1></h1>
     </header>
     <nav>
-        <ul>
-      <li><a href="index.html">Start</a></li>
-      <li><a href="leistungen.html">Leistungen</a></li>
-      <li><a href="kontakt.html">Kontakt</a></li>
-      <li><a href="bewertungen.html">Bewertungen</a></li>
-      <li><a href="impressum.html">Impressum</a></li>
-        </ul>
+      <ul class="navigation">
+        <li><a href="index.html">Start</a></li>
+        <li class="dropdown">
+          <a href="leistungen.html">Leistungen ▾</a>
+          <ul class="dropdown-content">
+            <li><a href="leistungen_it.html">IT & Büro</a></li>
+            <li><a href="leistungen_hg.html">Haus & Garten</a></li>
+          </ul>
+        </li>
+        <li><a href="kontakt.html">Kontakt</a></li>
+        <li><a href="bewertungen.html">Bewertungen</a></li>
+        <li><a href="impressum.html">Impressum</a></li>
+      </ul>
     </nav>
     <main>
   <section>
@@ -59,50 +65,9 @@
 
     </br>
 
-    <h3>Webdesign und Webseitenerstellung</h3>
-    <ul class="zentriert">
-      <li>Erstellung schlichter, funktionaler <b>Webseiten nach Kundenwunsch</b> – z. B. als digitale Visitenkarte, Angebotsseite oder Informationsplattform</li>
-      <li>Webseiten für kleine Unternehmen, Vereine, Interessengemeinschaften oder private Projekte</li>
-	  <li>Optimierung für mobile Endgeräte (responsive Gestaltung bei Bedarf)</li>
-      <li>Unterstützung und Beratung bei Struktur, Text und technischer Umsetzung</li>
-      <li>Hosting über externe Anbieter oder GitHub Pages möglich</li>
-      <li>Auch Offline-Projekte auf HTML-Basis sind umsetzbar – z. B. ein persönliches Dashboard</li>
-    </ul>
-    <p><em>Ich biete ausschließlich einfache, statische Weblösungen an. Keine Onlineshops, keine Formulare mit Datenspeicherung, keine Datenbankanbindungen, keine Systempflege.</em></p>
-
-    <div class="trenner"></div>
-
-    <h3>IT- und Bürodienstleistungen</h3>
-    <ul class="zentriert">
-      <li>Unterstützung bei der effizienten Nutzung von <b>Microsoft Excel</b> – vom einfachen Tabellenaufbau bis zur Erstellung komplexer Formeln und Diagramme.</li>
-      <li>Erstellung individueller Excel-Dokumente und einfacher Datenlösungen anhand konkreter Problemstellung</li>
-      <li>Entwicklung von Lösungsansätzen für besondere Anforderungen</li>
-      <li>tabellarische <b>Auswertung, Makroprogrammierung, Entwicklung von Formeln und Kalkulationen</b></li>
-      <li>komplexe Datenanalyse, auch von Massendaten</li>
-    </ul>
-
-    <div class="trenner"></div>
-
-    <h3>Modellierung & Visualisierung</h3>
-    <ul class="zentriert">
-      Erstellung illustrativer oder konzeptioneller Modelle (2D/ 3D), z. B.:<br>
-      <li>Raumplanungen, Möbelplatzierungen</li>
-      <li>Ideenskizzen für Hobbyräume, Gärten, Werkstätten</li>
-      <li>Nicht-technische <b>Grundrisse</b> (zur Orientierung oder Dekoration)</li>
-      Beispiel: Passen meine alten Möbel nach einem Umzug in die neue Wohnung? Ich visualisiere Ihre Idee in einem anschaulichen <b>3D-Modell</b>.
-    </ul>
-
-    <div class="trenner"></div>
-
-    <h3>Garten- und Hausmeistertätigkeiten</h3>
-    <ul class="zentriert">
-      <li>Rasen mähen, Freischneiden, Beete pflegen</li>
-      <li>Früchte abnehmen / ernten (z. B. Äpfel, Pflaumen, Beeren)</li>
-      <li>sonstige einfache Hilfsarbeiten im Haus oder Garten</li>
-    </ul>
+    <a href="leistungen_it.html"><img src="img/leistungen_it_l.png" width="200" height="200"></a>
+    <a href="leistungen_hg.html"><img src="img/leistungen_hg_r.png" width="200" height="200"></a>
     
-    <br>
-
     <h2>Kooperationen</h2>
     <ul class="zentriert">
       Bei umfangreicheren Aufträgen arbeite ich mit zuverlässigen Partnern aus der Region zusammen.
