--- a/leistungen.html
+++ b/leistungen.html
@@ -45,8 +45,9 @@
       <ul class="navigation">
         <li><a href="index.html">Start</a></li>
         <li class="dropdown">
-          <a href="leistungen.html">Leistungen ▾</a>
+        <a href="">Leistungen ▾</a>
           <ul class="dropdown-content">
+            <li><a href="leistungen.html">Leistungsübersicht</a></li>
             <li><a href="leistungen_it.html">IT & Büro</a></li>
             <li><a href="leistungen_hg.html">Haus & Garten</a></li>
           </ul>
@@ -65,8 +66,8 @@
 
     </br>
 
-    <a href="leistungen_it.html"><img src="img/leistungen_it_l.png" width="200" height="200"></a>
-    <a href="leistungen_hg.html"><img src="img/leistungen_hg_r.png" width="200" height="200"></a>
+    <a href="leistungen_it.html"><img src="img/leistungen_it_l.png" width="150"></a>
+    <a href="leistungen_hg.html"><img src="img/leistungen_hg_r.png" width="150"></a>
     
     <h2>Kooperationen</h2>
     <ul class="zentriert">
