--- a/bewertungen.html
+++ b/bewertungen.html
@@ -109,8 +109,11 @@
 </div>
 
 
-  <footer>
-    <p>&copy; 2025 Dienstleistungskontor von Hochstein</p>
-  </footer>
+    <footer>
+        <p>
+        &copy; 2025 Dienstleistungskontor von Hochstein<br>
+        <a href="kontakt.html">📩 Kontakt</a>
+        </p>
+    </footer>
 </body>
 </html>
