--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
   <p>Ein Kontor im klassischen Sinne – geordnet, aufrichtig, offen für kluge Lösungen.</p>
 
   <p><strong>Ich freue mich auf Ihre Anfrage.</strong></p>
+  <p><img src="img/personal.png" width="100"></p>  
+
+
   <a href="kontakt.html">Kontakt aufnehmen</a>
 </section>
 
