--- a/bewertungen.html
+++ b/bewertungen.html
@@ -89,25 +89,15 @@
 
     <p><small>Mit dem Absenden erklären Sie sich damit einverstanden, dass Ihre Angaben übermittelt werden. Es erfolgt keine automatische Datenspeicherung auf dieser Website.</small></p>
   </main>
-
+<!-- ★☆ -->
 <div class="bewertung">
   <div class="bewertung-header">
-    <span class="bewertung-name">Maria Musterfrau</span>
+    <span class="bewertung-name">Buchclub "Stabile Seitenlage"</span>
     <span class="bewertung-sterne">★★★★★</span>
   </div>
-  <p class="bewertung-text">Beispieltext 1</p>
-  <div class="bewertung-footer">eingegangen am 27.08.2025</div>
+  <p class="bewertung-text">Schnelle, freundliche und absolut zuverlässige Hilfe und Unterstützung bei der Betreuung unserer Bücherdatenbank.</p>
+  <div class="bewertung-footer">eingegangen am 01.09.2025</div>
 </div>
-
-<div class="bewertung">
-  <div class="bewertung-header">
-    <span class="bewertung-name">Max Mustermann</span>
-    <span class="bewertung-sterne">★★★★☆</span>
-  </div>
-  <p class="bewertung-text">Beispieltext 2</p>
-  <div class="bewertung-footer">eingegangen am 27.08.2025</div>
-</div>
-
 
     <footer>
         <p>
