--- a/bewertungen.html
+++ b/bewertungen.html
@@ -59,7 +59,7 @@
     </nav>
     <main>
     <h2>Kundenbewertungen</h2>
-    <p>Wenn Sie mit meiner Arbeit zufrieden waren, freue ich mich über eine kurze Rückmeldung.<br>
+    <p>Wenn Sie mit meiner Arbeit zufrieden waren, freue ich mich über eine kurze Rückmeldung.<br/>
        Die Veröffentlichung erfolgt nur mit Ihrer ausdrücklichen Zustimmung.</p>
 
     <form action="https://formspree.io/f/mblaloon" method="POST">
@@ -67,7 +67,7 @@
       <input type="text" id="name" name="name" /><br /><br />
 
       <label for="nachricht">Ihre Rückmeldung:</label><br />
-      <textarea id="nachricht" name="nachricht" rows="10" required></textarea><br /><br />
+      <textarea id="nachricht" name="nachricht" rows="10" required></textarea><br/><br/>
 
       <label for="sterne">Ihre Bewertung:</label><br />
       <div class="sterne-bewertung">
@@ -95,7 +95,10 @@
     <span class="bewertung-name">Buchclub "Stabile Seitenlage"</span>
     <span class="bewertung-sterne">★★★★★</span>
   </div>
-  <p class="bewertung-text">Schnelle, freundliche und absolut zuverlässige Hilfe und Unterstützung bei der Betreuung unserer Bücherdatenbank.</p>
+  <p class="bewertung-text"><b>Wir hatten eine Idee - und DKVH hat sie für uns möglich gemacht.</b><br/>
+	  Die Betreuung unserer Bücherdatenbank war hier in den besten Händen und wir konnten uns endlich auf das konzentrieren, was zählt: Lesen. 👍.<br/>
+	  Engagiert, verlässlich, freundlich und immer mit einem offenen Ohr für individuelle Wünsche.<br/>
+	  Vielen Dank dafür!</p>
   <div class="bewertung-footer">eingegangen am 01.09.2025</div>
 </div>
 
