--- a/bewertungen.html
+++ b/bewertungen.html
@@ -95,7 +95,7 @@
     <span class="bewertung-name">Buchclub "Stabile Seitenlage"</span>
     <span class="bewertung-sterne">★★★★★</span>
   </div>
-  <p class="bewertung-text"><b>Wir hatten eine Idee - und DKVH hat sie für uns möglich gemacht.</b><br/>
+  <p class="bewertung-text"><b>Wir hatten eine Idee - und Philipp hat sie für uns möglich gemacht.</b><br/>
 	  Die Betreuung unserer Bücherdatenbank war hier in den besten Händen und wir konnten uns endlich auf das konzentrieren, was zählt: Das Lesen 👍<br/>
 	  Engagiert, verlässlich, freundlich und immer mit einem offenen Ohr für individuelle Wünsche.<br/>
 	  Vielen Dank dafür!</p>
