bewertungen.html aktualisieren

--- a/bewertungen.html
+++ b/bewertungen.html
@@ -92,6 +92,15 @@
 <!-- ★☆ -->
 <div class="bewertung">
   <div class="bewertung-header">
+    <span class="bewertung-name">Kundenbewertung</span>
+    <span class="bewertung-sterne">☆☆☆☆☆</span>
+  </div>
+  <p class="bewertung-text">Bisher wurden noch keine Bewertungen abgegeben.</p>
+  <div class="bewertung-footer">eingegangen am 01.09.2025</div>
+</div>
+<!--
+<div class="bewertung">
+  <div class="bewertung-header">
     <span class="bewertung-name">Buchclub "Stabile Seitenlage"</span>
     <span class="bewertung-sterne">★★★★★</span>
   </div>
@@ -101,7 +110,7 @@
 	  Vielen Dank dafür!</p>
   <div class="bewertung-footer">eingegangen am 01.09.2025</div>
 </div>
-
+-->
     <footer>
         <p>
         &copy; 2025 Dienstleistungskontor von Hochstein<br>
