--- a/leistungen_hg.html
+++ b/leistungen_hg.html
@@ -80,7 +80,21 @@
 
   <div class="accordion-block">
     <input type="checkbox" id="eintrag2" class="accordion-toggle">
-    <label for="eintrag2" class="accordion-title">Hilfsarbeiten nach Anfrage</label>
+    <label for="eintrag2" class="accordion-title">Grabpflege - Respektvolle und zuverlässige Betreuung von Ruhestätten</label>
+    <div class="accordion-content">
+    <ul class="zentriert">
+      <li>Entfernen von Unkraut und Laub, Auflockern des Bodens</li>
+	  <li>Reinigung von Grabsteinen und Grabtafeln</li>
+      <li>Saisonale Bepflanzung und Blumenschmuck, jahreszeitliche Dekoration</li>
+	  <li>Platzierung von Kerzen und Grabschmuck</li>
+	  <li>Betreuung zu besonderen Anlässen (z.B. Todestag, Feiertage)</li>
+	  <li>Fotodokumentation der Pflegearbeiten (auf Wunsch per Mail oder WhatsApp)</li>
+    </div>
+  </div>  <div class="trenner"></div>
+
+  <div class="accordion-block">
+    <input type="checkbox" id="eintrag3" class="accordion-toggle">
+    <label for="eintrag3" class="accordion-title">Hilfsarbeiten nach Anfrage</label>
     <div class="accordion-content">
     <ul class="zentriert">
       <li>sonstige einfache Hilfsarbeiten im Haus oder Garten</li>
