impressum.html aktualisieren

--- a/impressum.html
+++ b/impressum.html
@@ -72,7 +72,7 @@
   <strong>Internet:</strong> <a href="https://www.dkvh.de" target="_blank">www.dkvh.de</a>
   </p>
 
-  <p><strong>Umsatzsteuer-ID:</strong><br>
+  <p><strong>Steuernummer:</strong><br>
   Wird nach Anmeldung beim Finanzamt ergänzt</p>
 
   <p><strong>Einzelunternehmen</strong><br>
