impressum.html aktualisieren

--- a/impressum.html
+++ b/impressum.html
@@ -73,7 +73,7 @@
   </p>
 
   <p><strong>Steuernummer:</strong><br>
-  Wird nach Anmeldung beim Finanzamt ergänzt</p>
+  Anmeldung ist erfolgt - wird nach Zuteilung vom Finanzamt ergänzt</p>
 
   <p><strong>Einzelunternehmen</strong><br>
   Nicht im Handelsregister eingetragen</p>
