--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         &copy; 2025 Dienstleistungskontor von Hochstein<br>
         <a href="kontakt.html">📩 Kontakt</a>
         </p>
+		<p style="text-align: right;">.</p>
     </footer>
 </body>
 </html>
