--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         &copy; 2025 Dienstleistungskontor von Hochstein<br>
         <a href="kontakt.html">📩 Kontakt</a>
         </p>
-		<p style="text-align: right;">.</p>
+		<a href="header.html"><p style="text-align: right;">.</p></a> 
     </footer>
 </body>
 </html>
