--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 </head>
 
 <body>
-  <div id="header-placeholder"></div>
+<!-- header -->	
+<div id="header-placeholder"></div>
   
 <main>
 <section>
@@ -54,7 +55,8 @@
 </section>
 </main>
 
-  <div id="footer-placeholder"></div>
+<!-- footer -->
+<div id="footer-placeholder"></div>
 
   <script>
     // Header laden
