--- a/impressum.html
+++ b/impressum.html
@@ -125,7 +125,7 @@
   <p>Ich behalte mir vor, diese Datenschutzerklärung bei Bedarf anzupassen. Bitte informieren Sie sich regelmäßig über den aktuellen Stand.</p><br>
   
   <h2>Urheberrecht</h2>
-  <p>Alle Inhalte dieser Website – insbesondere Texte, Bilder, Grafiken, Layout und Logo – unterliegen dem Urheberrecht und sind Eigentum des Dienstkontors von Hochstein, sofern nicht anders gekennzeichnet.<br>
+  <p>Alle Inhalte dieser Website – insbesondere Texte, Bilder, Grafiken, Layout und Logo – unterliegen dem Urheberrecht und sind Eigentum des Dienstleistungskontors von Hochstein, sofern nicht anders gekennzeichnet.<br>
   Jegliche Verwendung, Vervielfältigung oder Weitergabe, auch auszugsweise, ist nur mit ausdrücklicher schriftlicher Genehmigung gestattet.<br>
   Downloads und Ausdrucke sind ausschließlich für den privaten, nicht kommerziellen Gebrauch erlaubt.<br>
   Inhalte Dritter sind entsprechend gekennzeichnet. Bei unbeabsichtigten Urheberrechtsverletzungen bitten wir um einen Hinweis – solche Inhalte werden bei Bekanntwerden umgehend entfernt.</p>
