--- a/impressum.html
+++ b/impressum.html
@@ -128,7 +128,7 @@
   <p>Alle Inhalte dieser Website – insbesondere Texte, Bilder, Grafiken, Layout und Logo – unterliegen dem Urheberrecht und sind Eigentum des Dienstleistungskontors von Hochstein, sofern nicht anders gekennzeichnet.<br>
   Jegliche Verwendung, Vervielfältigung oder Weitergabe, auch auszugsweise, ist nur mit ausdrücklicher schriftlicher Genehmigung gestattet.<br>
   Downloads und Ausdrucke sind ausschließlich für den privaten, nicht kommerziellen Gebrauch erlaubt.<br>
-  Inhalte Dritter sind entsprechend gekennzeichnet. Bei unbeabsichtigten Urheberrechtsverletzungen bitten wir um einen Hinweis – solche Inhalte werden bei Bekanntwerden umgehend entfernt.</p>
+  Inhalte Dritter sind entsprechend gekennzeichnet. Bei unbeabsichtigten Urheberrechtsverletzungen bitte ich um einen Hinweis – solche Inhalte werden bei Bekanntwerden umgehend entfernt.</p>
 
 </main>
     <footer>
