--- a/impressum.html
+++ b/impressum.html
@@ -93,16 +93,9 @@
   06712 Zeitz<br>
   E-Mail: <a href="mailto:kontakt@dkvh.de">kontakt@dkvh.de</a></p>
 
-  <h3>3. Zugriffsdaten / Server-Logfiles</h3>
-  <p>Beim Besuch meiner Website erhebt und speichert der Webhosting-Anbieter automatisch Informationen in sogenannten Server-Logfiles, die Ihr Browser übermittelt. Dies sind:</p>
-  <ul>
-    - IP-Adresse des Besuchers<br>
-    - Datum und Uhrzeit der Serveranfrage<br>
-    - aufgerufene Seiten/Dateien<br>
-    - Browsertyp und -version<br>
-    - verwendetes Betriebssystem<br>
-    - Referrer-URL (sofern übermittelt)<br>
-  </ul>
+  <h3>3. Hosting & Datenschutz</h3>
+  <p>Diese Website wird über einen externen Hosting-Anbieter betrieben. Beim Aufruf der Seiten werden technisch notwendige Verbindungsdaten durch den Hostingdienst verarbeitet.</br>
+  Diese Daten sind für den Websitebetreiber nicht einsehbar und werden von ihm nicht ausgewertet.</br></p>
   <p>Diese Daten dienen ausschließlich der technischen Überwachung und Verbesserung der Website. Eine personenbezogene Auswertung findet nicht statt.<br>
   Diese Website selbst speichert keinerlei personenbezogenen Daten und verwendet keine Cookies oder Trackingdienste.</p>
 
